data/diff_tests/wasmtime/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3849.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\01\7f\00\60\01\7e\00\02\93\80\80\80\00\02\03\65"
    "\6e\76\02\66\31\00\00\03\65\6e\76\02\66\32\00\01"
    "\03\82\80\80\80\00\01\00\0a\97\80\80\80\00\01\91"
    "\80\80\80\00\00\20\00\04\40\20\00\10\00\05\20\00"
    "\ac\10\01\0b\0b"
  )
""
)